Restructured OnboardRestControllerIT, everything is now in the order it appears in the controller. Also added some missing tests.